@@ -1,6 +1,69 @@
 package org.cloudfoundry.identity.uaa.login;
 
-import java.awt.Color;
+import lombok.extern.slf4j.Slf4j;
+import org.cloudfoundry.identity.uaa.authentication.AuthzAuthenticationRequest;
+import org.cloudfoundry.identity.uaa.authentication.UaaAuthentication;
+import org.cloudfoundry.identity.uaa.authentication.UaaLoginHint;
+import org.cloudfoundry.identity.uaa.authentication.UaaPrincipal;
+import org.cloudfoundry.identity.uaa.codestore.ExpiringCode;
+import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeStore;
+import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeType;
+import org.cloudfoundry.identity.uaa.constants.OriginKeys;
+import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
+import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
+import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
+import org.cloudfoundry.identity.uaa.provider.NoSuchClientException;
+import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.UaaIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthProviderConfigurator;
+import org.cloudfoundry.identity.uaa.provider.saml.SamlIdentityProviderConfigurator;
+import org.cloudfoundry.identity.uaa.provider.saml.SamlRedirectUtils;
+import org.cloudfoundry.identity.uaa.util.ColorHash;
+import org.cloudfoundry.identity.uaa.util.DomainFilter;
+import org.cloudfoundry.identity.uaa.util.JsonUtils;
+import org.cloudfoundry.identity.uaa.util.JsonUtils.JsonUtilException;
+import org.cloudfoundry.identity.uaa.util.MapCollector;
+import org.cloudfoundry.identity.uaa.util.SessionUtils;
+import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
+import org.cloudfoundry.identity.uaa.web.UaaSavedRequestAwareAuthenticationSuccessHandler;
+import org.cloudfoundry.identity.uaa.zone.IdentityZone;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.Links;
+import org.cloudfoundry.identity.uaa.zone.MultitenantClientServices;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.support.PropertiesLoaderUtils;
+import org.springframework.dao.DataAccessException;
+import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.web.savedrequest.SavedRequest;
+import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
+import org.springframework.util.StringUtils;
+import org.springframework.web.HttpMediaTypeNotAcceptableException;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseBody;
+import org.springframework.web.util.UriComponentsBuilder;
+
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import javax.servlet.http.HttpSession;
+import java.awt.*;
 import java.io.IOException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
@@ -21,71 +84,7 @@ import java.util.Objects;
 import java.util.Properties;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpSession;
-
-import org.cloudfoundry.identity.uaa.provider.NoSuchClientException;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.io.support.PropertiesLoaderUtils;
-import org.springframework.dao.DataAccessException;
-import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.BadCredentialsException;
-import org.springframework.security.core.Authentication;
-import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
-import org.springframework.security.web.savedrequest.SavedRequest;
-import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
-import org.springframework.util.StringUtils;
-import org.springframework.web.HttpMediaTypeNotAcceptableException;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.ResponseBody;
-import org.springframework.web.util.UriComponentsBuilder;
-
-import org.cloudfoundry.identity.uaa.authentication.AuthzAuthenticationRequest;
-import org.cloudfoundry.identity.uaa.authentication.UaaAuthentication;
-import org.cloudfoundry.identity.uaa.authentication.UaaLoginHint;
-import org.cloudfoundry.identity.uaa.authentication.UaaPrincipal;
-import org.cloudfoundry.identity.uaa.codestore.ExpiringCode;
-import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeStore;
-import org.cloudfoundry.identity.uaa.codestore.ExpiringCodeType;
-import org.cloudfoundry.identity.uaa.constants.OriginKeys;
-import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
-import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
-import org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition;
-import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
-import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
-import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
-import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
-import org.cloudfoundry.identity.uaa.provider.UaaIdentityProviderDefinition;
-import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthProviderConfigurator;
-import org.cloudfoundry.identity.uaa.provider.saml.SamlIdentityProviderConfigurator;
-import org.cloudfoundry.identity.uaa.provider.saml.SamlRedirectUtils;
-import org.cloudfoundry.identity.uaa.util.ColorHash;
-import org.cloudfoundry.identity.uaa.util.DomainFilter;
-import org.cloudfoundry.identity.uaa.util.JsonUtils;
-import org.cloudfoundry.identity.uaa.util.JsonUtils.JsonUtilException;
-import org.cloudfoundry.identity.uaa.util.MapCollector;
-import org.cloudfoundry.identity.uaa.util.SessionUtils;
-import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
-import org.cloudfoundry.identity.uaa.web.UaaSavedRequestAwareAuthenticationSuccessHandler;
-import org.cloudfoundry.identity.uaa.zone.IdentityZone;
-import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
-import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
-import org.cloudfoundry.identity.uaa.zone.Links;
-import org.cloudfoundry.identity.uaa.zone.MultitenantClientServices;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.stream.Stream;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Base64.getDecoder;
@@ -95,16 +94,14 @@ import static java.util.Optional.ofNullable;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.UAA;
 import static org.cloudfoundry.identity.uaa.util.UaaUrlUtils.addSubdomainToUrl;
 import static org.springframework.util.StringUtils.hasText;
-import static org.springframework.web.bind.annotation.RequestMethod.GET;
 
 /**
  * Controller that sends login info (e.g. prompts) to clients wishing to
  * authenticate.
  */
 @Controller
+@Slf4j
 public class LoginInfoEndpoint {
-
-    private static Logger logger = LoggerFactory.getLogger(LoginInfoEndpoint.class);
 
     private static final String CREATE_ACCOUNT_LINK = "createAccountLink";
     private static final String FORGOT_PASSWORD_LINK = "forgotPasswordLink";
@@ -119,7 +116,23 @@ public class LoginInfoEndpoint {
     private static final String ENTITY_ID = "entityID";
     private static final String IDP_DEFINITIONS = "idpDefinitions";
     private static final String OAUTH_LINKS = "oauthLinks";
-
+    private static final String LOGIN_HINT_ATTRIBUTE = "login_hint";
+    private static final String EMAIL_ATTRIBUTE = "email";
+    private static final String ERROR_ATTRIBUTE = "error";
+    private static final String USERNAME_PARAMETER = "username";
+    private static final String CLIENT_ID_PARAMETER = "client_id";
+    private static final String LOGIN = "login";
+    private static final String REDIRECT = "redirect:";
+    private static final MapCollector<IdentityProvider, String, AbstractExternalOAuthIdentityProviderDefinition> idpsMapCollector =
+            new MapCollector<>(
+                    IdentityProvider::getOriginKey,
+                    idp -> (AbstractExternalOAuthIdentityProviderDefinition) idp.getConfig()
+            );
+    //http://stackoverflow.com/questions/5713558/detect-and-extract-url-from-a-string
+    // Pattern for recognizing a URL, based off RFC 3986
+    private static final Pattern urlPattern = Pattern.compile(
+            "((https?|ftp|gopher|telnet|file):((//)|(\\\\))+[\\w\\d:#@%/;$()~_?\\+-=\\\\\\.&]*)",
+            Pattern.CASE_INSENSITIVE);
     private final Properties gitProperties;
     private final Properties buildProperties;
     private final String baseUrl;
@@ -132,12 +145,6 @@ public class LoginInfoEndpoint {
     private final ExternalOAuthProviderConfigurator externalOAuthProviderConfigurator;
     private final Links globalLinks;
     private final String entityID;
-
-    private static final MapCollector<IdentityProvider, String, AbstractExternalOAuthIdentityProviderDefinition> idpsMapCollector =
-            new MapCollector<>(
-                    IdentityProvider::getOriginKey,
-                    idp -> (AbstractExternalOAuthIdentityProviderDefinition) idp.getConfig()
-            );
 
     public LoginInfoEndpoint(
             final @Qualifier("zoneAwareAuthzAuthenticationManager") AuthenticationManager authenticationManager,
@@ -172,6 +179,35 @@ public class LoginInfoEndpoint {
         }
     }
 
+    private static <T extends SavedAccountOption> List<T> getSavedAccounts(Cookie[] cookies, Class<T> clazz) {
+        return Arrays.stream(ofNullable(cookies).orElse(new Cookie[]{}))
+                .filter(c -> c.getName().startsWith("Saved-Account"))
+                .map(c -> {
+                    try {
+                        return JsonUtils.readValue(decodeCookieValue(c.getValue()), clazz);
+                    } catch (JsonUtilException e) {
+                        return null;
+                    }
+                })
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private static String decodeCookieValue(String inValue) {
+        try {
+            return URLDecoder.decode(inValue, UTF_8);
+        } catch (Exception e) {
+            log.debug("URLDecoder.decode failed for {}", inValue, e);
+            return "";
+        }
+    }
+
+    private static Map<String, AbstractIdentityProviderDefinition> concatenateMaps(Map<String, SamlIdentityProviderDefinition> samlIdentityProviders, Map<String, ? extends AbstractExternalOAuthIdentityProviderDefinition> oauthIdentityProviders) {
+        Map<String, AbstractIdentityProviderDefinition> allIdentityProviders = new HashMap<>(samlIdentityProviders);
+        allIdentityProviders.putAll(oauthIdentityProviders);
+        return allIdentityProviders;
+    }
+
     @RequestMapping(value = {"/login"}, headers = "Accept=application/json")
     public String infoForLoginJson(Model model, Principal principal, HttpServletRequest request) {
         return login(model, principal, Collections.emptyList(), true, request);
@@ -180,19 +216,6 @@ public class LoginInfoEndpoint {
     @RequestMapping(value = {"/info"}, headers = "Accept=application/json")
     public String infoForJson(Model model, Principal principal, HttpServletRequest request) {
         return login(model, principal, Collections.emptyList(), true, request);
-    }
-
-    static class SavedAccountOptionModel extends SavedAccountOption {
-        /**
-         * These must be public. They are accessed in templates.
-         */
-        public int red, green, blue;
-
-        void assignColors(Color color) {
-            red = color.getRed();
-            blue = color.getBlue();
-            green = color.getGreen();
-        }
     }
 
     @RequestMapping(value = {"/login"}, headers = "Accept=text/html, */*")
@@ -217,30 +240,7 @@ public class LoginInfoEndpoint {
 
         model.addAttribute("savedAccounts", savedAccounts);
 
-        return login(model, principal, Arrays.asList(PASSCODE), false, request);
-    }
-
-    private static <T extends SavedAccountOption> List<T> getSavedAccounts(Cookie[] cookies, Class<T> clazz) {
-        return Arrays.stream(ofNullable(cookies).orElse(new Cookie[]{}))
-                .filter(c -> c.getName().startsWith("Saved-Account"))
-                .map(c -> {
-                    try {
-                        return JsonUtils.readValue(decodeCookieValue(c.getValue()), clazz);
-                    } catch (JsonUtilException e) {
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
-    }
-
-    private static String decodeCookieValue(String inValue) {
-        try {
-            return URLDecoder.decode(inValue, UTF_8.name());
-        } catch (Exception e) {
-            logger.debug("URLDecoder.decode failed for " + inValue, e);
-            return "";
-        }
+        return login(model, principal, List.of(PASSCODE), false, request);
     }
 
     @RequestMapping(value = {"/invalid_request"})
@@ -253,7 +253,7 @@ public class LoginInfoEndpoint {
     }
 
     private String login(Model model, Principal principal, List<String> excludedPrompts, boolean jsonResponse, HttpServletRequest request) {
-        if (principal instanceof UaaAuthentication && ((UaaAuthentication) principal).isAuthenticated()) {
+        if (principal instanceof UaaAuthentication uaaPrincipal && uaaPrincipal.isAuthenticated()) {
             return "redirect:/home";
         }
 
@@ -287,41 +287,40 @@ public class LoginInfoEndpoint {
 
         Map<String, SamlIdentityProviderDefinition> samlIdentityProviders;
         Map<String, AbstractExternalOAuthIdentityProviderDefinition> oauthIdentityProviders;
-        Map<String, AbstractIdentityProviderDefinition> allIdentityProviders = Collections.emptyMap();
-        Map<String, AbstractIdentityProviderDefinition> loginHintProviders = Collections.emptyMap();
+        Map<String, AbstractIdentityProviderDefinition> allIdentityProviders = Map.of();
+        Map<String, AbstractIdentityProviderDefinition> loginHintProviders = Map.of();
 
         if (uaaLoginHint != null && (allowedIdentityProviderKeys == null || allowedIdentityProviderKeys.contains(uaaLoginHint.getOrigin()))) {
-            // Login hint: Only try to read the hinted IdP from database
+            // Login hint: Only try to read the hinted IdP from the database
             if (!(OriginKeys.UAA.equals(uaaLoginHint.getOrigin()) || OriginKeys.LDAP.equals(uaaLoginHint.getOrigin()))) {
                 try {
                     IdentityProvider loginHintProvider = externalOAuthProviderConfigurator
                             .retrieveByOrigin(uaaLoginHint.getOrigin(), IdentityZoneHolder.get().getId());
-                    loginHintProviders = Collections.singletonList(loginHintProvider).stream().collect(
+                    loginHintProviders = Stream.of(loginHintProvider).collect(
                             new MapCollector<IdentityProvider, String, AbstractIdentityProviderDefinition>(
                                     IdentityProvider::getOriginKey, IdentityProvider::getConfig));
                 } catch (EmptyResultDataAccessException ignored) {
+                    // ignore
                 }
             }
             if (!loginHintProviders.isEmpty()) {
-                oauthIdentityProviders = Collections.emptyMap();
-                samlIdentityProviders = Collections.emptyMap();
+                oauthIdentityProviders = Map.of();
+                samlIdentityProviders = Map.of();
             } else {
                 accountChooserNeeded = false;
                 samlIdentityProviders = getSamlIdentityProviderDefinitions(allowedIdentityProviderKeys);
                 oauthIdentityProviders = getOauthIdentityProviderDefinitions(allowedIdentityProviderKeys);
-                allIdentityProviders = new HashMap<>();
-                allIdentityProviders.putAll(samlIdentityProviders);
-                allIdentityProviders.putAll(oauthIdentityProviders);
+                allIdentityProviders = concatenateMaps(samlIdentityProviders, oauthIdentityProviders);
             }
         } else if (!jsonResponse && (accountChooserNeeded || (accountChooserEnabled && !discoveryEnabled && !discoveryPerformed))) {
             // when `/login` is requested to return html response (as opposed to json response)
             //Account and origin chooser do not need idp information
-            oauthIdentityProviders = Collections.emptyMap();
-            samlIdentityProviders = Collections.emptyMap();
+            oauthIdentityProviders = Map.of();
+            samlIdentityProviders = Map.of();
         } else {
             samlIdentityProviders = getSamlIdentityProviderDefinitions(allowedIdentityProviderKeys);
             oauthIdentityProviders = getOauthIdentityProviderDefinitions(allowedIdentityProviderKeys);
-            allIdentityProviders = new HashMap<>() {{putAll(samlIdentityProviders);putAll(oauthIdentityProviders);}};
+            allIdentityProviders = concatenateMaps(samlIdentityProviders, oauthIdentityProviders);
         }
 
         boolean fieldUsernameShow = true;
@@ -332,15 +331,14 @@ public class LoginInfoEndpoint {
                     OriginKeys.LDAP, IdentityZoneHolder.get().getId()
             );
         } catch (EmptyResultDataAccessException ignored) {
+            // ignore
         }
         IdentityProvider uaaIdentityProvider =
                 providerProvisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZoneHolder.get().getId());
         // ldap and uaa disabled removes username/password input boxes
-        if (!uaaIdentityProvider.isActive()) {
-            if (ldapIdentityProvider == null || !ldapIdentityProvider.isActive()) {
-                fieldUsernameShow = false;
-                returnLoginPrompts = false;
-            }
+        if (!uaaIdentityProvider.isActive() && (ldapIdentityProvider == null || !ldapIdentityProvider.isActive())) {
+            fieldUsernameShow = false;
+            returnLoginPrompts = false;
         }
 
         // ldap or uaa not part of allowedIdentityProviderKeys
@@ -358,14 +356,14 @@ public class LoginInfoEndpoint {
         idpForRedirect = evaluateIdpDiscovery(model, samlIdentityProviders, oauthIdentityProviders,
                 allIdentityProviders, allowedIdentityProviderKeys, idpForRedirect, discoveryPerformed, newLoginPageEnabled, defaultIdentityProviderName);
         if (idpForRedirect == null && !jsonResponse && !fieldUsernameShow && allIdentityProviders.size() == 1) {
-            idpForRedirect = allIdentityProviders.entrySet().stream().findAny().get();
+            idpForRedirect = allIdentityProviders.entrySet().stream().findFirst().orElse(null);
         }
         if (idpForRedirect != null) {
             String externalRedirect = redirectToExternalProvider(
                     idpForRedirect.getValue(), idpForRedirect.getKey(), request
             );
             if (externalRedirect != null && !jsonResponse) {
-                logger.debug("Following external redirect : " + externalRedirect);
+                log.debug("Following external redirect : {}", externalRedirect);
                 return externalRedirect;
             }
         }
@@ -374,16 +372,16 @@ public class LoginInfoEndpoint {
         if (fieldUsernameShow && (allowedIdentityProviderKeys != null) && ((!discoveryEnabled && !accountChooserEnabled) || discoveryPerformed)) {
             if (!allowedIdentityProviderKeys.contains(OriginKeys.UAA)) {
                 linkCreateAccountShow = false;
-                model.addAttribute("login_hint", new UaaLoginHint(OriginKeys.LDAP).toString());
+                model.addAttribute(LOGIN_HINT_ATTRIBUTE, new UaaLoginHint(OriginKeys.LDAP).toString());
             } else if (!allowedIdentityProviderKeys.contains(OriginKeys.LDAP)) {
-                model.addAttribute("login_hint", new UaaLoginHint(OriginKeys.UAA).toString());
+                model.addAttribute(LOGIN_HINT_ATTRIBUTE, new UaaLoginHint(OriginKeys.UAA).toString());
             }
         }
 
         String zonifiedEntityID = getZonifiedEntityId();
-        Map links = getLinksInfo();
+        Map<String, ?> links = getLinksInfo();
         if (jsonResponse) {
-            setJsonInfo(model, samlIdentityProviders, zonifiedEntityID, links);
+            setJsonInfo(model, samlIdentityProviders, links);
         } else {
             updateLoginPageModel(model, request, clientName, samlIdentityProviders, oauthIdentityProviders,
                     fieldUsernameShow, linkCreateAccountShow);
@@ -396,12 +394,12 @@ public class LoginInfoEndpoint {
         model.addAttribute(ENTITY_ID, zonifiedEntityID);
 
         excludedPrompts = new LinkedList<>(excludedPrompts);
-        String origin = request != null ? request.getParameter("origin") : null;
+        String origin = request.getParameter("origin");
         populatePrompts(model, excludedPrompts, origin, samlIdentityProviders, oauthIdentityProviders,
                 excludedPrompts, returnLoginPrompts);
 
         if (principal == null) {
-            return getUnauthenticatedRedirect(model, request, discoveryEnabled, discoveryPerformed, accountChooserNeeded ,accountChooserEnabled);
+            return getUnauthenticatedRedirect(model, request, discoveryEnabled, discoveryPerformed, accountChooserNeeded, accountChooserEnabled);
         }
         return "home";
     }
@@ -425,21 +423,21 @@ public class LoginInfoEndpoint {
             if (!discoveryPerformed) {
                 return "idp_discovery/email";
             }
-            return goToPasswordPage(request.getParameter("email"), model);
+            return goToPasswordPage(request.getParameter(EMAIL_ATTRIBUTE), model);
         }
         if (accountChooserEnabled) {
-            if (model.containsAttribute("login_hint")) {
-                return goToPasswordPage(request.getParameter("email"), model);
+            if (model.containsAttribute(LOGIN_HINT_ATTRIBUTE)) {
+                return goToPasswordPage(request.getParameter(EMAIL_ATTRIBUTE), model);
             }
-            if (model.containsAttribute("error")) {
+            if (model.containsAttribute(ERROR_ATTRIBUTE)) {
                 return "idp_discovery/account_chooser";
             }
             if (discoveryPerformed) {
-                return goToPasswordPage(request.getParameter("email"), model);
+                return goToPasswordPage(request.getParameter(EMAIL_ATTRIBUTE), model);
             }
             return "idp_discovery/origin";
         }
-        return "login";
+        return LOGIN;
     }
 
     private void updateLoginPageModel(
@@ -474,8 +472,7 @@ public class LoginInfoEndpoint {
     private void setJsonInfo(
             Model model,
             Map<String, SamlIdentityProviderDefinition> samlIdentityProviders,
-            String zonifiedEntityID,
-            Map links
+            Map<String, ?> links
     ) {
         for (String attribute : UI_ONLY_ATTRIBUTES) {
             links.remove(attribute);
@@ -483,10 +480,7 @@ public class LoginInfoEndpoint {
         Map<String, String> idpDefinitionsForJson = new HashMap<>();
         if (samlIdentityProviders != null) {
             for (SamlIdentityProviderDefinition def : samlIdentityProviders.values()) {
-                String idpUrl = links.get("login") +
-                        String.format("/saml/discovery?returnIDParam=idp&entityID=%s&idp=%s&isPassive=true",
-                                zonifiedEntityID,
-                                def.getIdpEntityAlias());
+                String idpUrl = "%s/saml2/authenticate/%s".formatted(links.get(LOGIN), def.getIdpEntityAlias());
                 idpDefinitionsForJson.put(def.getIdpEntityAlias(), idpUrl);
             }
             model.addAttribute(IDP_DEFINITIONS, idpDefinitionsForJson);
@@ -504,7 +498,8 @@ public class LoginInfoEndpoint {
             boolean newLoginPageEnabled,
             String defaultIdentityProviderName
     ) {
-        if (idpForRedirect == null && (discoveryPerformed || !newLoginPageEnabled) && defaultIdentityProviderName != null && !model.containsAttribute("login_hint") && !model.containsAttribute("error")) { //Default set, no login_hint given, no error, discovery performed
+        // Default set, no login_hint given, no error, discovery performed
+        if (idpForRedirect == null && (discoveryPerformed || !newLoginPageEnabled) && defaultIdentityProviderName != null && !model.containsAttribute(LOGIN_HINT_ATTRIBUTE) && !model.containsAttribute(ERROR_ATTRIBUTE)) {
             if (!OriginKeys.UAA.equals(defaultIdentityProviderName) && !OriginKeys.LDAP.equals(defaultIdentityProviderName)) {
                 if (allIdentityProviders.containsKey(defaultIdentityProviderName)) {
                     idpForRedirect =
@@ -512,7 +507,7 @@ public class LoginInfoEndpoint {
                 }
             } else if (allowedIdentityProviderKeys == null || allowedIdentityProviderKeys.contains(defaultIdentityProviderName)) {
                 UaaLoginHint loginHint = new UaaLoginHint(defaultIdentityProviderName);
-                model.addAttribute("login_hint", loginHint.toString());
+                model.addAttribute(LOGIN_HINT_ATTRIBUTE, loginHint.toString());
                 samlIdentityProviders.clear();
                 oauthIdentityProviders.clear();
             }
@@ -521,13 +516,11 @@ public class LoginInfoEndpoint {
     }
 
     private String extractLoginHintParam(HttpSession session, HttpServletRequest request) {
-        String loginHintParam =
-                ofNullable(session)
-                        .flatMap(s -> ofNullable(SessionUtils.getSavedRequestSession(s)))
-                        .flatMap(sr -> ofNullable(sr.getParameterValues("login_hint")))
-                        .flatMap(lhValues -> Arrays.stream(lhValues).findFirst())
-                        .orElse(request.getParameter("login_hint"));
-        return loginHintParam;
+        return ofNullable(session)
+                .flatMap(s -> ofNullable(SessionUtils.getSavedRequestSession(s)))
+                .flatMap(sr -> ofNullable(sr.getParameterValues(LOGIN_HINT_ATTRIBUTE)))
+                .flatMap(lhValues -> Arrays.stream(lhValues).findFirst())
+                .orElse(request.getParameter(LOGIN_HINT_ATTRIBUTE));
     }
 
     private Map.Entry<String, AbstractIdentityProviderDefinition> evaluateLoginHint(
@@ -544,16 +537,16 @@ public class LoginInfoEndpoint {
         if (loginHintParam != null) {
             // parse login_hint in JSON format
             if (uaaLoginHint != null) {
-                logger.debug("Received login hint: {}", UaaStringUtils.getCleanedUserControlString(loginHintParam));
-                logger.debug("Received login hint with origin: " + uaaLoginHint.getOrigin());
+                log.debug("Received login hint: {}", UaaStringUtils.getCleanedUserControlString(loginHintParam));
+                log.debug("Received login hint with origin: {}", uaaLoginHint.getOrigin());
                 if (OriginKeys.UAA.equals(uaaLoginHint.getOrigin()) || OriginKeys.LDAP.equals(uaaLoginHint.getOrigin())) {
                     if (allowedIdentityProviderKeys == null || allowedIdentityProviderKeys.contains(uaaLoginHint.getOrigin())) {
                         // in case of uaa/ldap, pass value to login page
-                        model.addAttribute("login_hint", loginHintParam);
+                        model.addAttribute(LOGIN_HINT_ATTRIBUTE, loginHintParam);
                         samlIdentityProviders.clear();
                         oauthIdentityProviders.clear();
                     } else {
-                        model.addAttribute("error", "invalid_login_hint");
+                        model.addAttribute(ERROR_ATTRIBUTE, "invalid_login_hint");
                     }
                 } else {
                     // for oidc/saml, trigger the redirect
@@ -564,11 +557,11 @@ public class LoginInfoEndpoint {
                     }
                     if (loginHintProviders.size() == 1) {
                         idpForRedirect = new ArrayList<>(loginHintProviders.entrySet()).get(0);
-                        logger.debug("Setting redirect from origin login_hint to: " + idpForRedirect);
+                        log.debug("Setting redirect from origin login_hint to: {}", idpForRedirect);
                     } else {
-                        logger.debug("Client does not allow provider for login_hint with origin key: "
-                                + uaaLoginHint.getOrigin());
-                        model.addAttribute("error", "invalid_login_hint");
+                        log.debug("Client does not allow provider for login_hint with origin key: {}",
+                                uaaLoginHint.getOrigin());
+                        model.addAttribute(ERROR_ATTRIBUTE, "invalid_login_hint");
                     }
                 }
             } else {
@@ -577,14 +570,14 @@ public class LoginInfoEndpoint {
                         allIdentityProviders.entrySet().stream().filter(
                                 idp -> ofNullable(idp.getValue().getEmailDomain()).orElse(Collections.emptyList()).contains(
                                         loginHintParam)
-                        ).collect(Collectors.toList());
+                        ).toList();
                 if (matchingIdentityProviders.size() > 1) {
                     throw new IllegalStateException(
                             "There is a misconfiguration with the identity provider(s). Please contact your system administrator."
                     );
                 } else if (matchingIdentityProviders.size() == 1) {
                     idpForRedirect = matchingIdentityProviders.get(0);
-                    logger.debug("Setting redirect from email domain login hint to: " + idpForRedirect);
+                    log.debug("Setting redirect from email domain login hint to: {}", idpForRedirect);
                 }
             }
         }
@@ -600,15 +593,14 @@ public class LoginInfoEndpoint {
         return "redirect:/login";
     }
 
-
     private String redirectToExternalProvider(AbstractIdentityProviderDefinition idpForRedirect, String idpOriginKey, HttpServletRequest request) {
         if (idpForRedirect != null) {
-            if (idpForRedirect instanceof SamlIdentityProviderDefinition) {
-                String url = SamlRedirectUtils.getIdpRedirectUrl((SamlIdentityProviderDefinition) idpForRedirect, entityID, IdentityZoneHolder.get());
+            if (idpForRedirect instanceof SamlIdentityProviderDefinition samlIdentityProviderDefinition) {
+                String url = SamlRedirectUtils.getIdpRedirectUrl(samlIdentityProviderDefinition, entityID, IdentityZoneHolder.get());
                 return "redirect:/" + url;
-            } else if (idpForRedirect instanceof AbstractExternalOAuthIdentityProviderDefinition) {
-                String redirectUrl = getRedirectUrlForExternalOAuthIDP(request, idpOriginKey, (AbstractExternalOAuthIdentityProviderDefinition) idpForRedirect);
-                return "redirect:" + redirectUrl;
+            } else if (idpForRedirect instanceof AbstractExternalOAuthIdentityProviderDefinition providerDefinition) {
+                String redirectUrl = getRedirectUrlForExternalOAuthIDP(request, idpOriginKey, providerDefinition);
+                return REDIRECT + redirectUrl;
             }
         }
         return null;
@@ -616,8 +608,8 @@ public class LoginInfoEndpoint {
 
     private String getRedirectUrlForExternalOAuthIDP(HttpServletRequest request, String idpOriginKey, AbstractExternalOAuthIdentityProviderDefinition definition) {
         String idpAuthenticationUrl = externalOAuthProviderConfigurator.getIdpAuthenticationUrl(definition, idpOriginKey, request);
-        if (request.getParameter("username") != null && definition.getUserPropagationParameter() != null) {
-            idpAuthenticationUrl = UriComponentsBuilder.fromUriString(idpAuthenticationUrl).queryParam(definition.getUserPropagationParameter(), request.getParameter("username")).build().toUriString();
+        if (request.getParameter(USERNAME_PARAMETER) != null && definition.getUserPropagationParameter() != null) {
+            idpAuthenticationUrl = UriComponentsBuilder.fromUriString(idpAuthenticationUrl).queryParam(definition.getUserPropagationParameter(), request.getParameter(USERNAME_PARAMETER)).build().toUriString();
         }
         return idpAuthenticationUrl;
     }
@@ -643,8 +635,8 @@ public class LoginInfoEndpoint {
         }
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(session);
         String redirectUrl = savedRequest.getRedirectUrl();
-        String[] client_ids = savedRequest.getParameterValues("client_id");
-        return redirectUrl != null && redirectUrl.contains("/oauth/authorize") && client_ids != null && client_ids.length != 0;
+        String[] clientIds = savedRequest.getParameterValues(CLIENT_ID_PARAMETER);
+        return redirectUrl != null && redirectUrl.contains("/oauth/authorize") && clientIds != null && clientIds.length != 0;
     }
 
     private Map<String, Object> getClientInfo(HttpSession session) {
@@ -652,9 +644,9 @@ public class LoginInfoEndpoint {
             return null;
         }
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(session);
-        String[] client_ids = savedRequest.getParameterValues("client_id");
+        String[] clientIds = savedRequest.getParameterValues(CLIENT_ID_PARAMETER);
         try {
-            ClientDetails clientDetails = clientDetailsService.loadClientByClientId(client_ids[0], IdentityZoneHolder.get().getId());
+            ClientDetails clientDetails = clientDetailsService.loadClientByClientId(clientIds[0], IdentityZoneHolder.get().getId());
             return clientDetails.getAdditionalInformation();
         } catch (NoSuchClientException x) {
             return null;
@@ -699,7 +691,7 @@ public class LoginInfoEndpoint {
             excludedPrompts.add(PASSCODE);
         }
         if (!returnLoginPrompts) {
-            excludedPrompts.add("username");
+            excludedPrompts.add(USERNAME_PARAMETER);
             excludedPrompts.add("password");
         }
 
@@ -714,14 +706,12 @@ public class LoginInfoEndpoint {
             try {
                 providerForOrigin = providerProvisioning.retrieveByOrigin(origin, IdentityZoneHolder.get().getId());
             } catch (DataAccessException ignored) {
+                // ignore
             }
-            if (providerForOrigin != null) {
-                if (providerForOrigin.getConfig() instanceof OIDCIdentityProviderDefinition) {
-                    OIDCIdentityProviderDefinition oidcConfig = (OIDCIdentityProviderDefinition) providerForOrigin.getConfig();
-                    List<Prompt> providerPrompts = oidcConfig.getPrompts();
-                    if (providerPrompts != null) {
-                        prompts = providerPrompts;
-                    }
+            if (providerForOrigin != null && providerForOrigin.getConfig() instanceof OIDCIdentityProviderDefinition oidcConfig) {
+                List<Prompt> providerPrompts = oidcConfig.getPrompts();
+                if (providerPrompts != null) {
+                    prompts = providerPrompts;
                 }
             }
         }
@@ -745,12 +735,6 @@ public class LoginInfoEndpoint {
         model.addAttribute("prompts", map);
     }
 
-    //http://stackoverflow.com/questions/5713558/detect-and-extract-url-from-a-string
-    // Pattern for recognizing a URL, based off RFC 3986
-    private static final Pattern urlPattern = Pattern.compile(
-            "((https?|ftp|gopher|telnet|file):((//)|(\\\\))+[\\w\\d:#@%/;$()~_?\\+-=\\\\\\.&]*)",
-            Pattern.CASE_INSENSITIVE);
-
     private String extractUrlFromString(String s) {
         Matcher matcher = urlPattern.matcher(s);
         if (matcher.find()) {
@@ -762,8 +746,8 @@ public class LoginInfoEndpoint {
         return null;
     }
 
-    @RequestMapping(value = "/origin-chooser", method = RequestMethod.POST)
-    public String loginUsingOrigin(@RequestParam(required = false, name = "login_hint") String loginHint, Model model, HttpSession session, HttpServletRequest request) {
+    @PostMapping(value = "/origin-chooser")
+    public String loginUsingOrigin(@RequestParam(required = false, name = LOGIN_HINT_ATTRIBUTE) String loginHint) {
         if (!StringUtils.hasText(loginHint)) {
             return "redirect:/login?discoveryPerformed=true";
         }
@@ -771,27 +755,27 @@ public class LoginInfoEndpoint {
         return "redirect:/login?discoveryPerformed=true&login_hint=" + URLEncoder.encode(uaaLoginHint.toString(), UTF_8);
     }
 
-
-    @RequestMapping(value = "/login/idp_discovery", method = RequestMethod.POST)
-    public String discoverIdentityProvider(@RequestParam String email, @RequestParam(required = false) String skipDiscovery, @RequestParam(required = false, name = "login_hint") String loginHint,  @RequestParam(required = false, name = "username") String username,Model model, HttpSession session, HttpServletRequest request) {
+    @PostMapping(value = "/login/idp_discovery")
+    public String discoverIdentityProvider(@RequestParam String email, @RequestParam(required = false) String skipDiscovery, @RequestParam(required = false, name = LOGIN_HINT_ATTRIBUTE) String loginHint, @RequestParam(required = false, name = USERNAME_PARAMETER) String username, Model model, HttpSession session, HttpServletRequest request) {
         ClientDetails clientDetails = null;
         if (hasSavedOauthAuthorizeRequest(session)) {
             SavedRequest savedRequest = SessionUtils.getSavedRequestSession(session);
-            String[] client_ids = savedRequest.getParameterValues("client_id");
+            String[] clientIds = savedRequest.getParameterValues(CLIENT_ID_PARAMETER);
             try {
-                clientDetails = clientDetailsService.loadClientByClientId(client_ids[0], IdentityZoneHolder.get().getId());
+                clientDetails = clientDetailsService.loadClientByClientId(clientIds[0], IdentityZoneHolder.get().getId());
             } catch (NoSuchClientException ignored) {
+                // ignore
             }
         }
         if (StringUtils.hasText(loginHint)) {
-            model.addAttribute("login_hint", loginHint);
+            model.addAttribute(LOGIN_HINT_ATTRIBUTE, loginHint);
         }
         List<IdentityProvider> identityProviders = DomainFilter.filter(providerProvisioning.retrieveActive(IdentityZoneHolder.get().getId()), clientDetails, email, false);
 
         if (!StringUtils.hasText(skipDiscovery) && identityProviders.size() == 1) {
             IdentityProvider matchedIdp = identityProviders.get(0);
             if (matchedIdp.getType().equals(UAA)) {
-                model.addAttribute("login_hint", new UaaLoginHint("uaa").toString());
+                model.addAttribute(LOGIN_HINT_ATTRIBUTE, new UaaLoginHint("uaa").toString());
                 return goToPasswordPage(email, model);
             } else {
                 String redirectUrl;
@@ -802,17 +786,17 @@ public class LoginInfoEndpoint {
         }
 
         if (StringUtils.hasText(email)) {
-            model.addAttribute("email", email);
+            model.addAttribute(EMAIL_ATTRIBUTE, email);
         }
         if (StringUtils.hasText(username)) {
-            model.addAttribute("username", username);
+            model.addAttribute(USERNAME_PARAMETER, username);
         }
         return "redirect:/login?discoveryPerformed=true";
     }
 
     private String goToPasswordPage(String email, Model model) {
         model.addAttribute(ZONE_NAME, IdentityZoneHolder.get().getName());
-        model.addAttribute("email", email);
+        model.addAttribute(EMAIL_ATTRIBUTE, email);
         String forgotPasswordLink;
         if ((forgotPasswordLink = getSelfServiceLinks().get(FORGOT_PASSWORD_LINK)) != null) {
             model.addAttribute(FORGOT_PASSWORD_LINK, forgotPasswordLink);
@@ -820,10 +804,10 @@ public class LoginInfoEndpoint {
         return "idp_discovery/password";
     }
 
-    @RequestMapping(value = "/autologin", method = RequestMethod.POST)
+    @PostMapping(value = "/autologin")
     @ResponseBody
     public AutologinResponse generateAutologinCode(@RequestBody AutologinRequest request,
-                                                   @RequestHeader(value = "Authorization", required = false) String auth) throws Exception {
+                                                   @RequestHeader(value = "Authorization", required = false) String auth) {
 
         if (auth == null || (!auth.startsWith("Basic"))) {
             throw new BadCredentialsException("No basic authorization client information in request");
@@ -843,29 +827,26 @@ public class LoginInfoEndpoint {
         }
 
         String base64Credentials = auth.substring("Basic".length()).trim();
-        String credentials = new String(getDecoder().decode(base64Credentials.getBytes()), UTF_8.name());
+        String credentials = new String(getDecoder().decode(base64Credentials.getBytes()), UTF_8);
         // credentials = username:password
         final String[] values = credentials.split(":", 2);
-        if (values == null || values.length == 0) {
+        if (values.length == 0) {
             throw new BadCredentialsException("Invalid authorization header.");
         }
         String clientId = values[0];
         Map<String, String> codeData = new HashMap<>();
-        codeData.put("client_id", clientId);
-        codeData.put("username", username);
-        if (userAuthentication != null && userAuthentication.getPrincipal() instanceof UaaPrincipal) {
-            UaaPrincipal p = (UaaPrincipal) userAuthentication.getPrincipal();
-            if (p != null) {
-                codeData.put("user_id", p.getId());
-                codeData.put(OriginKeys.ORIGIN, p.getOrigin());
-            }
+        codeData.put(CLIENT_ID_PARAMETER, clientId);
+        codeData.put(USERNAME_PARAMETER, username);
+        if (userAuthentication != null && userAuthentication.getPrincipal() instanceof UaaPrincipal p) {
+            codeData.put("user_id", p.getId());
+            codeData.put(OriginKeys.ORIGIN, p.getOrigin());
         }
         ExpiringCode expiringCode = expiringCodeStore.generateCode(JsonUtils.writeValueAsString(codeData), new Timestamp(System.currentTimeMillis() + 5 * 60 * 1000), ExpiringCodeType.AUTOLOGIN.name(), IdentityZoneHolder.get().getId());
 
         return new AutologinResponse(expiringCode.getCode());
     }
 
-    @RequestMapping(value = "/autologin", method = GET)
+    @GetMapping(value = "/autologin")
     public String performAutologin(HttpSession session) {
         String redirectLocation = "home";
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(session);
@@ -873,15 +854,15 @@ public class LoginInfoEndpoint {
             redirectLocation = savedRequest.getRedirectUrl();
         }
 
-        return "redirect:" + redirectLocation;
+        return REDIRECT + redirectLocation;
     }
 
-    @RequestMapping(value = "/login_implicit", method = GET)
+    @GetMapping(value = "/login_implicit")
     public String captureImplicitValuesUsingJavascript() {
         return "login_implicit";
     }
 
-    @RequestMapping(value = "/login/callback/{origin}")
+    @GetMapping(value = "/login/callback/{origin}")
     public String handleExternalOAuthCallback(final HttpSession session) {
         String redirectLocation = "/home";
         SavedRequest savedRequest = SessionUtils.getSavedRequestSession(session);
@@ -889,7 +870,7 @@ public class LoginInfoEndpoint {
             redirectLocation = savedRequest.getRedirectUrl();
         }
 
-        return "redirect:" + redirectLocation;
+        return REDIRECT + redirectLocation;
     }
 
     private Map<String, ?> getLinksInfo() {
@@ -897,11 +878,11 @@ public class LoginInfoEndpoint {
         Map<String, Object> model = new HashMap<>();
         model.put(OriginKeys.UAA, addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()));
         if (baseUrl.contains("localhost:")) {
-            model.put("login", addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()));
+            model.put(LOGIN, addSubdomainToUrl(baseUrl, IdentityZoneHolder.get().getSubdomain()));
         } else if (hasText(externalLoginUrl)) {
-            model.put("login", externalLoginUrl);
+            model.put(LOGIN, externalLoginUrl);
         } else {
-            model.put("login", addSubdomainToUrl(baseUrl.replaceAll(OriginKeys.UAA, "login"), IdentityZoneHolder.get().getSubdomain()));
+            model.put(LOGIN, addSubdomainToUrl(baseUrl.replaceAll(OriginKeys.UAA, LOGIN), IdentityZoneHolder.get().getSubdomain()));
         }
         model.putAll(getSelfServiceLinks());
         return model;
@@ -911,9 +892,9 @@ public class LoginInfoEndpoint {
         Map<String, String> selfServiceLinks = new HashMap<>();
         IdentityZone zone = IdentityZoneHolder.get();
         IdentityProvider<UaaIdentityProviderDefinition> uaaIdp = providerProvisioning.retrieveByOriginIgnoreActiveFlag(OriginKeys.UAA, IdentityZoneHolder.get().getId());
-        boolean disableInternalUserManagement = (uaaIdp.getConfig() != null) ? uaaIdp.getConfig().isDisableInternalUserManagement() : false;
+        boolean disableInternalUserManagement = uaaIdp.getConfig() != null && uaaIdp.getConfig().isDisableInternalUserManagement();
 
-        boolean selfServiceLinksEnabled = (zone.getConfig() != null) ? zone.getConfig().getLinks().getSelfService().isSelfServiceLinksEnabled() : true;
+        boolean selfServiceLinksEnabled = zone.getConfig() == null || zone.getConfig().getLinks().getSelfService().isSelfServiceLinksEnabled();
 
         final String defaultSignup = "/create_account";
         final String defaultPasswd = "/forgot_password";
@@ -941,5 +922,20 @@ public class LoginInfoEndpoint {
             }
         }
         return selfServiceLinks;
+    }
+
+    static class SavedAccountOptionModel extends SavedAccountOption {
+        /**
+         * These must be public. They are accessed in templates.
+         */
+        public int red;
+        public int green;
+        public int blue;
+
+        void assignColors(Color color) {
+            red = color.getRed();
+            blue = color.getBlue();
+            green = color.getGreen();
+        }
     }
 }
