@@ -14,6 +14,7 @@
 
 package org.cloudfoundry.identity.uaa.login;
 
+import org.assertj.core.api.Assertions;
 import org.cloudfoundry.identity.uaa.DefaultTestContext;
 import org.cloudfoundry.identity.uaa.client.UaaClientDetails;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
@@ -22,6 +23,7 @@ import org.cloudfoundry.identity.uaa.message.util.FakeJavaMailSender;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils.IdentityZoneCreationResult;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils.ZoneScimInviteData;
+import org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils;
 import org.cloudfoundry.identity.uaa.provider.AbstractIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition;
@@ -38,7 +40,6 @@ import org.springframework.http.MediaType;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mock.web.MockHttpSession;
-import org.cloudfoundry.identity.uaa.oauth.common.util.OAuth2Utils;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -50,14 +51,18 @@ import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils.CookieCsrfPostProcessor.cookieCsrf;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
 import static org.hamcrest.Matchers.containsString;
-import static org.hamcrest.Matchers.endsWith;
-import static org.junit.Assert.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.model;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrl;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.redirectedUrlPattern;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 
 @DefaultTestContext
 public class InvitationsServiceMockMvcTests {
@@ -78,8 +83,8 @@ public class InvitationsServiceMockMvcTests {
 
     public static final String REDIRECT_URI = "http://invitation.redirect.test";
     private JavaMailSender originalSender;
-    private FakeJavaMailSender fakeJavaMailSender = new FakeJavaMailSender();
-    private AlphanumericRandomValueStringGenerator generator = new AlphanumericRandomValueStringGenerator();
+    private final FakeJavaMailSender fakeJavaMailSender = new FakeJavaMailSender();
+    private final AlphanumericRandomValueStringGenerator generator = new AlphanumericRandomValueStringGenerator();
     private String clientId;
     private String userInviteToken;
 
@@ -122,20 +127,20 @@ public class InvitationsServiceMockMvcTests {
     void testAuthorizeWithInvitationLogin() throws Exception {
         String email = new AlphanumericRandomValueStringGenerator().generate().toLowerCase() + "@test.org";
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
-        assertEquals(OriginKeys.UAA, jdbcTemplate.queryForObject("SELECT origin FROM users WHERE username=?", new Object[]{email}, String.class));
+        assertThat(jdbcTemplate.queryForObject("SELECT origin FROM users WHERE username=?", new Object[]{email}, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         MvcResult result = mockMvc.perform(
-                get("/invitations/accept")
-                        .param("code", code)
-                        .accept(MediaType.TEXT_HTML)
-        )
+                        get("/invitations/accept")
+                                .param("code", code)
+                                .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string(containsString("Email: " + email)))
                 .andReturn();
         MockHttpSession inviteSession = (MockHttpSession) result.getRequest().getSession(false);
-        assertNotNull(inviteSession);
-        assertNotNull(inviteSession.getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY));
+        assertThat(inviteSession).isNotNull();
+        assertThat(inviteSession.getAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY)).isNotNull();
         String redirectUri = "https://example.com/dashboard/?appGuid=app-guid";
         String clientId = "authclient-" + new AlphanumericRandomValueStringGenerator().generate();
         UaaClientDetails client = new UaaClientDetails(clientId, "", "openid", GRANT_TYPE_AUTHORIZATION_CODE, "", redirectUri);
@@ -157,34 +162,33 @@ public class InvitationsServiceMockMvcTests {
                 .andExpect(status().is3xxRedirection())
                 .andReturn();
         String location = result.getResponse().getHeader("Location");
-        assertThat(location, endsWith("/login"));
-        assertEquals(-1, location.indexOf("code"));
+        assertThat(location).endsWith("/login")
+                .doesNotContain("code");
     }
 
     @Test
     void acceptInvitationShouldNotLogYouIn() throws Exception {
         String email = new AlphanumericRandomValueStringGenerator().generate().toLowerCase() + "@test.org";
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
-        assertEquals(OriginKeys.UAA, jdbcTemplate.queryForObject("SELECT origin FROM users WHERE username=?", new Object[]{email}, String.class));
+        assertThat(jdbcTemplate.queryForObject("SELECT origin FROM users WHERE username=?", new Object[]{email}, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         MvcResult result = mockMvc.perform(get("/invitations/accept")
-                .param("code", code)
-                .accept(MediaType.TEXT_HTML)
-        )
+                        .param("code", code)
+                        .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string(containsString("Email: " + email)))
                 .andReturn();
 
         MockHttpSession session = (MockHttpSession) result.getRequest().getSession(false);
         mockMvc.perform(
-                get("/profile")
-                        .session(session)
-                        .accept(MediaType.TEXT_HTML)
-        )
+                        get("/profile")
+                                .session(session)
+                                .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isFound())
                 .andExpect(redirectedUrlPattern("**/login"));
-
     }
 
     @Test
@@ -193,15 +197,15 @@ public class InvitationsServiceMockMvcTests {
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
 
         jdbcTemplate.update("UPDATE users SET verified=true WHERE email=?", email);
-        assertTrue("User should not be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertEquals(OriginKeys.UAA, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should not be verified").isTrue();
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         mockMvc.perform(
-                get("/invitations/accept")
-                        .param("code", code)
-                        .accept(MediaType.TEXT_HTML)
-        )
+                        get("/invitations/accept")
+                                .param("code", code)
+                                .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isFound())
                 .andExpect(redirectedUrl(REDIRECT_URI));
     }
@@ -210,7 +214,7 @@ public class InvitationsServiceMockMvcTests {
     void acceptInvitationForUaaUserShouldNotExpireInvitelink() throws Exception {
         String email = new AlphanumericRandomValueStringGenerator().generate().toLowerCase() + "@test.org";
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
-        assertEquals(OriginKeys.UAA, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         MockHttpServletRequestBuilder get = get("/invitations/accept")
@@ -219,7 +223,7 @@ public class InvitationsServiceMockMvcTests {
         mockMvc.perform(get)
                 .andExpect(status().isOk());
         mockMvc.perform(get)
-            .andExpect(status().isOk());
+                .andExpect(status().isOk());
         mockMvc.perform(get)
                 .andExpect(status().isOk());
     }
@@ -231,44 +235,44 @@ public class InvitationsServiceMockMvcTests {
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
         URL invalidLink = inviteUser(webApplicationContext, mockMvc, invalid, userInviteToken, null, clientId, OriginKeys.UAA);
 
-        assertFalse("User should not be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertEquals(OriginKeys.UAA, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should not be verified").isFalse();
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         String invalidCode = extractInvitationCode(invalidLink.toString());
 
         MvcResult result = mockMvc.perform(get("/invitations/accept")
-                .param("code", code)
-                .accept(MediaType.TEXT_HTML)
-        )
+                        .param("code", code)
+                        .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string(containsString("Email: " + email)))
                 .andReturn();
 
         MockHttpSession session = (MockHttpSession) result.getRequest().getSession(false);
         result = mockMvc.perform(
-                post("/invitations/accept.do")
-                        .session(session)
-                        .param("password", "s3cret")
-                        .param("password_confirmation", "s3cret")
-                        .param("code", invalidCode)
-                        .with(cookieCsrf())
-        )
+                        post("/invitations/accept.do")
+                                .session(session)
+                                .param("password", "s3cret")
+                                .param("password_confirmation", "s3cret")
+                                .param("code", invalidCode)
+                                .with(cookieCsrf())
+                )
                 .andExpect(status().isUnprocessableEntity())
                 .andExpect(model().attribute("error_message_code", "code_expired"))
                 .andExpect(view().name("invitations/accept_invite"))
                 .andReturn();
 
-        assertFalse("User should be not yet be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertNull(session.getAttribute("SPRING_SECURITY_CONTEXT"));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should be not yet be verified").isFalse();
+        assertThat(session.getAttribute("SPRING_SECURITY_CONTEXT")).isNull();
 
         session = (MockHttpSession) result.getRequest().getSession(false);
         //not logged in anymore
         mockMvc.perform(
-                get("/profile")
-                        .session(session)
-                        .accept(MediaType.TEXT_HTML)
-        )
+                        get("/profile")
+                                .session(session)
+                                .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isFound())
                 .andExpect(redirectedUrl("http://localhost/login"));
     }
@@ -278,14 +282,14 @@ public class InvitationsServiceMockMvcTests {
         String email = new AlphanumericRandomValueStringGenerator().generate().toLowerCase() + "@test.org";
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, userInviteToken, null, clientId, OriginKeys.UAA);
 
-        assertFalse("User should not be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertEquals(OriginKeys.UAA, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should not be verified").isFalse();
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(OriginKeys.UAA);
 
         String code = extractInvitationCode(inviteLink.toString());
         MvcResult result = mockMvc.perform(get("/invitations/accept")
-                .param("code", code)
-                .accept(MediaType.TEXT_HTML)
-        )
+                        .param("code", code)
+                        .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string(containsString("Email: " + email)))
                 .andReturn();
@@ -293,25 +297,25 @@ public class InvitationsServiceMockMvcTests {
         code = jdbcTemplate.queryForObject("SELECT code FROM expiring_code_store", String.class);
         MockHttpSession session = (MockHttpSession) result.getRequest().getSession(false);
         result = mockMvc.perform(
-                post("/invitations/accept.do")
-                        .session(session)
-                        .param("password", "s3cret")
-                        .param("password_confirmation", "s3cret")
-                        .param("code", code)
-                        .with(cookieCsrf())
-        )
+                        post("/invitations/accept.do")
+                                .session(session)
+                                .param("password", "s3cret")
+                                .param("password_confirmation", "s3cret")
+                                .param("code", code)
+                                .with(cookieCsrf())
+                )
                 .andExpect(status().isFound())
                 .andExpect(redirectedUrl("/login?success=invite_accepted&form_redirect_uri=" + REDIRECT_URI))
                 .andReturn();
 
-        assertTrue("User should be verified after password reset", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should be verified after password reset").isTrue();
 
         session = (MockHttpSession) result.getRequest().getSession(false);
         mockMvc.perform(
-                get("/profile")
-                        .session(session)
-                        .accept(MediaType.TEXT_HTML)
-        )
+                        get("/profile")
+                                .session(session)
+                                .accept(MediaType.TEXT_HTML)
+                )
                 .andExpect(status().isFound())
                 .andExpect(redirectedUrlPattern("**/login"));
     }
@@ -328,8 +332,8 @@ public class InvitationsServiceMockMvcTests {
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, zone.getAdminToken(), zone.getZone().getIdentityZone().getSubdomain(), zone.getScimInviteClient().getClientId(), provider.getOriginKey());
         String code = extractInvitationCode(inviteLink.toString());
 
-        assertFalse("User should not be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertEquals(OriginKeys.LDAP, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should not be verified").isFalse();
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(OriginKeys.LDAP);
 
         ResultActions actions = mockMvc.perform(get("/invitations/accept")
                 .param("code", code)
@@ -340,7 +344,7 @@ public class InvitationsServiceMockMvcTests {
                 .andExpect(status().isOk())
                 .andExpect(content().string(containsString("Email: " + email)));
 
-        assertFalse("LDAP user should not be verified after accepting invite until logging in", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("LDAP user should not be verified after accepting invite until logging in").isFalse();
     }
 
     @Test
@@ -352,34 +356,27 @@ public class InvitationsServiceMockMvcTests {
         SamlIdentityProviderDefinition definition = getSamlIdentityProviderDefinition(zone.getZone(), entityID);
         definition.setEmailDomain(Collections.singletonList(domain));
         definition.setIdpEntityAlias(originKey);
-        IdentityProvider provider = createIdentityProvider(mockMvc, zone.getZone(), originKey, definition);
+        IdentityProvider<SamlIdentityProviderDefinition> provider = createIdentityProvider(mockMvc, zone.getZone(), originKey, definition);
 
         String email = new AlphanumericRandomValueStringGenerator().generate().toLowerCase() + "@" + domain;
         URL inviteLink = inviteUser(webApplicationContext, mockMvc, email, zone.getAdminToken(), zone.getZone().getIdentityZone().getSubdomain(), zone.getScimInviteClient().getClientId(), provider.getOriginKey());
         String code = extractInvitationCode(inviteLink.toString());
 
-        assertFalse("User should not be verified", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
-        assertEquals(originKey, queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("User should not be verified").isFalse();
+        assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(originKey);
 
         //should redirect to saml provider
         mockMvc.perform(
-                get("/invitations/accept")
-                        .param("code", code)
-                        .accept(MediaType.TEXT_HTML)
-                        .header("Host", zone.getZone().getIdentityZone().getSubdomain() + ".localhost")
-        )
+                        get("/invitations/accept")
+                                .param("code", code)
+                                .accept(MediaType.TEXT_HTML)
+                                .header("Host", zone.getZone().getIdentityZone().getSubdomain() + ".localhost")
+                )
                 .andExpect(status().is3xxRedirection())
-                .andExpect(
-                        redirectedUrl(
-                                String.format("/saml/discovery?returnIDParam=idp&entityID=%s.cloudfoundry-saml-login&idp=%s&isPassive=true",
-                                        zone.getZone().getIdentityZone().getId(),
-                                        originKey)
-                        )
-                );
+                .andExpect(redirectedUrl("/saml2/authenticate/%s".formatted(originKey)));
 
-
-        assertEquals(provider.getOriginKey(), queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class));
-        assertFalse("Saml user should not yet be verified after clicking on the accept link", queryUserForField(jdbcTemplate, email, "verified", Boolean.class));
+        Assertions.assertThat(queryUserForField(jdbcTemplate, email, OriginKeys.ORIGIN, String.class)).isEqualTo(provider.getOriginKey());
+        assertThat(queryUserForField(jdbcTemplate, email, "verified", Boolean.class)).as("Saml user should not yet be verified after clicking on the accept link").isFalse();
     }
 
     private static <T> T queryUserForField(JdbcTemplate jdbcTemplate, String email, String field, Class<T> type) {
@@ -390,7 +387,7 @@ public class InvitationsServiceMockMvcTests {
         return MockMvcUtils.createZoneForInvites(mockMvc, webApplicationContext, clientId, REDIRECT_URI, IdentityZoneHolder.getCurrentZoneId());
     }
 
-    private static IdentityProvider createIdentityProvider(MockMvc mockMvc, IdentityZoneCreationResult zone, String nameAndOriginKey, AbstractIdentityProviderDefinition definition) throws Exception {
+    private static <T extends AbstractIdentityProviderDefinition> IdentityProvider<T> createIdentityProvider(MockMvc mockMvc, IdentityZoneCreationResult zone, String nameAndOriginKey, T definition) throws Exception {
         return MockMvcUtils.createIdentityProvider(mockMvc, zone, nameAndOriginKey, definition);
     }
 
@@ -410,5 +407,4 @@ public class InvitationsServiceMockMvcTests {
     private static String extractInvitationCode(String inviteLink) {
         return MockMvcUtils.extractInvitationCode(inviteLink);
     }
-
 }
